--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "bootstrap": "^5.3.1",
+    "clipboard-copy": "^4.0.1",
     "dayjs": "^1.11.9",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
