--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.1",
     "clipboard-copy": "^4.0.1",
     "dayjs": "^1.11.9",
@@ -27,6 +28,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "sharp": "^0.32.6",
     "typescript": "5.1.6"
   },
